fixed map tiler overlay to z-index 0

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,9 +13,10 @@
   justify-content: center;
   pointer-events: none;
 }
-.leaflet-container {
+.leaflet-container  {
   width: 100%;
   height: 100%;
+  z-index: 0 !important; 
 }
 
 ::selection{
